<resources>
    <string name="app_name">AuthenticKart</string>

    <!--Fonts file name-->
    <!--Add more if required-->
    <string name="regular">Quicksand-Regular.otf</string>
    <string name="medium">Quicksand-Medium.ttf</string>
    <string name="light">Quicksand-Light.otf</string>
    <string name="bold">Quicksand-Bold.otf</string>
    <string name="italic">Quicksand-Italic.otf</string>
    <string name="bold_italic">Quicksand-BoldItalic.otf</string>


    <string name="landing_tag_line">Find out whether your purchase is authentic</string>
    <string name="get_started">Get Started</string>
    <string name="existing_user">I\'m an existing user</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_error">Please check your email and password and try again</string>
    <string name="sign_up_error">Please enter valid data to create your account</string>
    <string name="categories">Categories</string>
    <string name="subcategories">Subcategories</string>
    <string name="brands">Brands</string>
    <string name="scan_description">Now scan the barcode of your product by tapping on \"Scan my product\" button below, you will shortly see if your product is authentic!</string>
    <string name="scan_my_product">Scan my Product</string>
    <string name="product_authentic">Congratulations, your product is Authentic!</string>
    <string name="product_authenticity_unknown">Your product\'s authenticity could not be determined!</string>
    <string name="scan_product">Scan Product</string>
    <string name="brand_selection">You\'ve selected</string>
    <string name="scan_product_prompt">Scan your product\'s barcode</string>
</resources>
