<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_just_toolbar" />

    <com.authentickart.detector.custom.AuthKartEditText
        android:id="@+id/et_first_name"
        style="@style/EditTextStyleSingleLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_48dp"
        android:hint="@string/first_name"
        android:inputType="textPersonName|textCapSentences" />

    <com.authentickart.detector.custom.AuthKartEditText
        android:id="@+id/et_last_name"
        style="@style/EditTextStyleSingleLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:hint="@string/last_name"
        android:inputType="textPersonName|textCapSentences" />

    <com.authentickart.detector.custom.AuthKartEditText
        android:id="@+id/et_email"
        style="@style/EditTextStyleSingleLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <com.authentickart.detector.custom.AuthKartEditText
        android:id="@+id/et_password"
        style="@style/EditTextStyleSingleLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <com.authentickart.detector.custom.AuthKartButton
        android:id="@+id/btn_sign_up"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:includeFontPadding="false"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:font="@string/bold" />

    <ProgressBar
        android:id="@+id/pb_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/dimen_16dp"
        android:indeterminate="true"
        android:visibility="gone" />

</LinearLayout>